--- a/Website/index.html
+++ b/Website/index.html
@@ -46,6 +46,7 @@
     <img src="../1820/1820.svg" alt="1820 SVG Map" /><br/>
     <img src="../1840/1840.svg" alt="1840 SVG Map" /><br/>
     <img src="../1860/1860.svg" alt="1860 SVG Map" /><br/>
+    <img src="../1880/1880.svg" alt="1880 SVG Map" /><br/>
 </body>
 
 </html>
