--- a/Website/index.html
+++ b/Website/index.html
@@ -47,6 +47,13 @@
     <img src="../1840/1840.svg" alt="1840 SVG Map" /><br/>
     <img src="../1860/1860.svg" alt="1860 SVG Map" /><br/>
     <img src="../1880/1880.svg" alt="1880 SVG Map" /><br/>
+    <img src="../1900/1900.svg" alt="1900 SVG Map" /><br/>
+    <img src="../1920/1920.svg" alt="1920 SVG Map" /><br/>
+    <img src="../1940/1940.svg" alt="1940 SVG Map" /><br/>
+    <img src="../1960/1960.svg" alt="1960 SVG Map" /><br/>
+    <img src="../1980/1980.svg" alt="1980 SVG Map" /><br/>
+    <img src="../2000/2000.svg" alt="2000 SVG Map" /><br/>
+    <img src="../2020/2020.svg" alt="2020 SVG Map" /><br/>
 </body>
 
 </html>
